# botc_tokens

./: .flake8  .gitattributes  .gitignore  README.md  create_master_list.py  create_printable_from_script.py  create_token_images.py  example_script.json  pyproject.toml  reminders.json  role.py  update_from_web.py
.github/workflows/: python-app.yml  python-publish.yml
components/: Token BG.afdesign
examples/: README.md
imgs/: Token BG.afdesign
src/botc_tokens/: __init__.py  __main__.py  pyproject.toml
src/botc_tokens/api/: __init__.py  app.py
src/botc_tokens/commands/: __init__.py  create.py  dump_components.py  group.py  printable.py  update.py
src/botc_tokens/data/: duplicate_schema.json  forced_setup.json  known_duplicates.json  known_reminders.json  reminder_schema.json  role_schema.json
src/botc_tokens/data/components/: Token BG.afdesign
src/botc_tokens/helpers/: __init__.py  printable.py  progress_group.py  role.py  text_tools.py  token_components.py  token_creation.py  wiki_soup.py
tests/: conftest.py  test_main.py  testhelpers.py
tests/commands/: __init__.py  test_create.py  test_dump_components.py  test_group.py  test_update.py
tests/helpers/: __init__.py  test_role.py  test_text_tools.py  test_token_components.py  test_wiki_soup.py
